--- a/css/sass/_animaciones.sass
+++ b/css/sass/_animaciones.sass
@@ -1,79 +1,60 @@
 @keyframes atraxa
     0%
         background-image: url(../../media/img/atraxa.jpg)
-        transform: scale(100%)
     20%
         background-image: url(../../media/img/ajani.jpg)
-        transform: scale(105%)
     40%
         background-image: url(../../media/img/bastion.jpg)
-        transform: scale(100%)
     60%
         background-image: url(../../media/img/polillas.jpg)
-        transform: scale(105%)
     80%
         background-image: url(../../media/img/ratas.jpg)
-        transform: scale(100%)
     100%
         background-image: url(../../media/img/skate.jpg)
-        transform: scale(105%)
 
 @keyframes oloro
     0%
         background-image: url(../../media/img/oloro.jpeg)
-        transform: scale(100%)
     20%
         background-image: url(../../media/img/arbitro.jpg)
-        transform: scale(105%)
     40%
         background-image: url(../../media/img/drannith.jpg)
-        transform: scale(100%)
     60%
         background-image: url(../../media/img/opposition.jpg)
-        transform: scale(105%)
     80%
         background-image: url(../../media/img/vampiric.png)
-        transform: scale(100%)
     100%
         background-image: url(../../media/img/aetherflux.jpg)
-        transform: scale(105%)
 
 @keyframes brago
     0%
         background-image: url(../../media/img/brago.jpg)
-        transform: scale(100%)
     20%
         background-image: url(../../media/img/venser.jpg)
-        transform: scale(105%)
     40%
         background-image: url(../../media/img/veredicto.jpg)
-        transform: scale(100%)
     60%
         background-image: url(../../media/img/remora.webp)
-        transform: scale(105%)
     80%
         background-image: url(../../media/img/teferi.jpg)
-        transform: scale(100%)
     100%
         background-image: url(../../media/img/azcanta.jpeg)
-        transform: scale(105%)
 
 @keyframes urdragon
     0%
         background-image: url(../../media/img/urdragon.webp)
-        transform: scale(100%)
     20%
         background-image: url(../../media/img/tiamat.jpg)
-        transform: scale(105%)
     40%
         background-image: url(../../media/img/rohehuesos.png)
-        transform: scale(100%)
     60%
         background-image: url(../../media/img/copper.jpg)
-        transform: scale(105%)
     80%
         background-image: url(../../media/img/dromoka.jpg)
-        transform: scale(100%)
     100%
         background-image: url(../../media/img/balefire.jpeg)
-        transform: scale(105%)
+
+
+@keyframes zoomIn
+    to
+        transform: scale(110%)
