--- a/css/sass/_variables.sass
+++ b/css/sass/_variables.sass
@@ -44,7 +44,7 @@ $secondaryStrong: #b1b1b1c4
                 padding: 0
                 margin: 0
 
-@mixin animaciones()
+@mixin animacion()
     animation-duration: 40s
     animation-iteration-count: infinite
     animation-timing-function: linear
