--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -44,9 +44,9 @@ header
         @include menu
 
 main
-    height: calc( 100vh - 111.65px )
+    height: calc( 100vh - 75.65px )
 
-    margin-top: 111.65px
+    margin-top: 75.65px
 
     aside
         position: fixed
@@ -71,14 +71,18 @@ main
         height: 100%
 
         color: white
+        box-shadow: 7px 7px 10px inset black
 
         overflow: scroll
 
         article
             border: 1px solid black
             border-radius: 4px
+            box-shadow: 7px 7px 10px black
 
             overflow: hidden
+
+            transition: .7s ease
 
             a
                 text-decoration: none
@@ -89,6 +93,8 @@ main
 
                 background-color: white
                 background-size: 110% 110%
+
+                transition: 2s ease
 
             p
                 position: relative
@@ -111,12 +117,22 @@ main
 
                     padding: 10px
 
+            &:hover
+                transform: scale(98%)
+
+                div
+                    background-position-x: 40%
+                    background-position-y: 50%
+                    background-size: 120% 120%
+
+
+
         article:first-child
             margin-right: 11.5vw
 
             div
                 animation-name: atraxa
-                @include animaciones
+                @include animacion
 
             p 
                 background-image: url("data:image/svg+xml;utf8,%3Csvg preserveAspectRatio='none' viewBox='0 0 1 1' version='1.1' xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3ClinearGradient id='g'%3E%3Cstop offset='0' stop-color='%23fff' stop-opacity='0'%3E%3C/stop%3E%3Cstop offset='1' stop-color='%23fff' stop-opacity='1'%3E%3C/stop%3E%3C/linearGradient%3E%3Cmask id='m'%3E%3Crect x='0' y='0' width='1' height='1' fill='url(%23g)'%3E%3C/rect%3E%3C/mask%3E%3ClinearGradient id='a' gradientTransform='rotate(90)'%3E%3Cstop offset='0' stop-color='black'%3E%3C/stop%3E%3Cstop offset='1' stop-color='white'%3E%3C/stop%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientTransform='rotate(90)'%3E%3Cstop offset='0' stop-color='green'%3E%3C/stop%3E%3Cstop offset='1' stop-color='blue'%3E%3C/stop%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' width='1' height='1' fill='url(%23a)' mask='url(%23m)'%3E%3C/rect%3E%3Crect x='0' y='0' width='1' height='1' fill='url(%23b)' mask='url(%23m)' transform='translate(1,1) rotate(180)'%3E%3C/rect%3E%3C/svg%3E")
@@ -128,7 +144,7 @@ main
 
             div
                 animation-name: oloro
-                @include animaciones
+                @include animacion
 
             p
                 background-image: linear-gradient(to right, #000000, #2e2e2e, #585858, #878787, #b9b9b9, #c2bed0, #cac4e8, #d3c9ff, #b2a1ff, #8e7aff, #6351ff, #0022ff)
@@ -138,7 +154,7 @@ main
 
             div
                 animation-name: brago
-                @include animaciones
+                @include animacion
 
             p
                 background: linear-gradient(0deg, rgba(255,255,255,1) 46%, rgba(0,42,255,1) 52%)
@@ -148,7 +164,7 @@ main
 
             div
                 animation-name: urdragon
-                @include animaciones
+                @include animacion
 
             p
                 background-image: radial-gradient(circle, #4719cb, #0067f4, #008de7, #00a9bf, #00c09d, #47b36d, #6ba33c, #898f00, #855e0f, #67371d, #391c1b, #000000)
