--- a/css/sass/_media.sass
+++ b/css/sass/_media.sass
@@ -7,9 +7,6 @@
         float: right
 
 @media screen and (max-width: 1200px)
-    section
-        padding-bottom: 20px
-
     .deck
         float: none
         width: calc( 400px + 5vw )
@@ -17,6 +14,10 @@
         margin: 5% 0 !important
 
 @media screen and (max-width: 1125px)
+    section > h1
+        margin-top: 20px !important
+        margin-bottom: 20px !important
+
     article
         width: 70%
         max-width: none !important
@@ -40,3 +41,7 @@
         height: calc( 100vh - 117.65px )
 
         margin-top: 117.65px
+
+@media screen and (max-width: 480px)
+    .deck
+        width: 80%
