--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -356,6 +356,12 @@ main section .deck:first-child p {
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
+main section > h1 {
+  width: 100%;
+  font-size: 4vw;
+  text-align: center;
+  margin: 0;
+}
 main section .deck:nth-child(2) {
   margin-left: 11.5vw;
 }
@@ -565,9 +571,6 @@ main section .deck:nth-child(4) p {
   }
 }
 @media screen and (max-width: 1200px) {
-  section {
-    padding-bottom: 20px;
-  }
   .deck {
     float: none;
     width: calc(400px + 5vw);
@@ -575,6 +578,10 @@ main section .deck:nth-child(4) p {
   }
 }
 @media screen and (max-width: 1125px) {
+  section > h1 {
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
+  }
   article {
     width: 70%;
     max-width: none !important;
@@ -596,5 +603,10 @@ main section .deck:nth-child(4) p {
   main {
     height: calc(100vh - 117.65px);
     margin-top: 117.65px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .deck {
+    width: 80%;
   }
 }/*# sourceMappingURL=main.css.map */
