Decks rc3 (+ responsividad y cambios estéticos)

--- a/css/sass/_media.sass
+++ b/css/sass/_media.sass
@@ -2,16 +2,19 @@
     #tierras .card, #resto .card
         width: 100%
     
-@media screen and (max-width: 1300px)
+@media screen and (max-width: 1322px)
     .deck
         float: right
+
+        margin: 5% 0 !important
 
 @media screen and (max-width: 1200px)
     .deck
         float: none
         width: calc( 400px + 5vw )
-
-        margin: 5% 0 !important
+    
+    .circulo.azul
+        margin-right: 50px
 
 @media screen and (max-width: 1125px)
     section > h1
