--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -1,3 +1,36 @@
+@import url("https://fonts.googleapis.com/css2?family=Caveat&display=swap");
+.azul {
+  background-color: blue;
+}
+
+.blanco {
+  background-color: white;
+}
+
+.negro {
+  background-color: black;
+}
+
+.rojo {
+  background-color: red;
+}
+
+.verde {
+  background-color: green;
+}
+
+.disabled {
+  border: 1px solid black;
+}
+.disabled::after {
+  content: "";
+  display: block;
+  width: 21px;
+  height: 21px;
+  border-bottom: 3px solid black;
+  transform: translateY(-7px) translateX(-9px) rotate(-55deg);
+}
+
 @-webkit-keyframes atraxa {
   0% {
     background-image: url(../../media/img/atraxa.jpg);
@@ -18,6 +51,7 @@
     background-image: url(../../media/img/skate.jpg);
   }
 }
+
 @keyframes atraxa {
   0% {
     background-image: url(../../media/img/atraxa.jpg);
@@ -169,6 +203,7 @@
   }
 }
 body {
+  font-family: "Caveat", cursive;
   background-color: rgb(26, 26, 26);
   margin: 0;
 }
@@ -181,7 +216,7 @@ header {
   background-color: antiquewhite;
   z-index: 2;
 }
-header > img {
+header > a img {
   float: right;
   width: 100px;
 }
@@ -299,7 +334,7 @@ main section {
 }
 main section .deck {
   border: 1px solid black;
-  border-radius: 4px;
+  border-radius: 8px;
   box-shadow: 7px 7px 10px black;
   overflow: hidden;
   transition: 0.7s ease;
@@ -307,28 +342,33 @@ main section .deck {
 main section .deck a {
   text-decoration: none;
 }
-main section .deck div {
-  height: calc(200px + 5vw);
-  width: calc(400px + 5vw);
+main section .deck a > div {
+  position: relative;
+  height: calc(240px + 5vw);
+  width: calc(440px + 5vw);
   background-color: white;
   background-size: 110% 110%;
   transition: 2s ease;
 }
-main section .deck p {
-  position: relative;
-  text-align: center;
-  text-transform: uppercase;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-  padding: 20px;
-  margin: 0;
-  z-index: 1;
-}
-main section .deck p b {
+main section .deck a > div b {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
+  font-size: calc(20px + 0.9vw);
   border-radius: 10px;
   padding: 10px;
+  z-index: 1;
+}
+main section .deck a > div > div {
+  width: 20px;
+  height: 20px;
+  float: right;
+  border-radius: 50%;
+  box-shadow: 2px 2px 5px black;
+  margin-top: 10px;
+  margin-right: 10px;
 }
 main section .deck:hover {
   transform: scale(98%);
@@ -338,10 +378,16 @@ main section .deck:hover div {
   background-position-y: 50%;
   background-size: 120% 120%;
 }
+main section > h1 {
+  width: 100%;
+  font-size: 4vw;
+  text-align: center;
+  margin: 0;
+}
 main section .deck:first-child {
   margin-right: 11.5vw;
 }
-main section .deck:first-child div {
+main section .deck:first-child a > div {
   -webkit-animation-name: atraxa;
           animation-name: atraxa;
   -webkit-animation-duration: 40s;
@@ -351,21 +397,10 @@ main section .deck:first-child div {
   -webkit-animation-timing-function: linear;
           animation-timing-function: linear;
 }
-main section .deck:first-child p {
-  background-image: url("data:image/svg+xml;utf8,%3Csvg preserveAspectRatio='none' viewBox='0 0 1 1' version='1.1' xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3ClinearGradient id='g'%3E%3Cstop offset='0' stop-color='%23fff' stop-opacity='0'%3E%3C/stop%3E%3Cstop offset='1' stop-color='%23fff' stop-opacity='1'%3E%3C/stop%3E%3C/linearGradient%3E%3Cmask id='m'%3E%3Crect x='0' y='0' width='1' height='1' fill='url(%23g)'%3E%3C/rect%3E%3C/mask%3E%3ClinearGradient id='a' gradientTransform='rotate(90)'%3E%3Cstop offset='0' stop-color='black'%3E%3C/stop%3E%3Cstop offset='1' stop-color='white'%3E%3C/stop%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientTransform='rotate(90)'%3E%3Cstop offset='0' stop-color='green'%3E%3C/stop%3E%3Cstop offset='1' stop-color='blue'%3E%3C/stop%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' width='1' height='1' fill='url(%23a)' mask='url(%23m)'%3E%3C/rect%3E%3Crect x='0' y='0' width='1' height='1' fill='url(%23b)' mask='url(%23m)' transform='translate(1,1) rotate(180)'%3E%3C/rect%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-}
-main section > h1 {
-  width: 100%;
-  font-size: 4vw;
-  text-align: center;
-  margin: 0;
-}
 main section .deck:nth-child(2) {
   margin-left: 11.5vw;
 }
-main section .deck:nth-child(2) div {
+main section .deck:nth-child(2) a > div {
   -webkit-animation-name: oloro;
           animation-name: oloro;
   -webkit-animation-duration: 40s;
@@ -375,13 +410,10 @@ main section .deck:nth-child(2) div {
   -webkit-animation-timing-function: linear;
           animation-timing-function: linear;
 }
-main section .deck:nth-child(2) p {
-  background-image: linear-gradient(to right, #000000, #2e2e2e, #585858, #878787, #b9b9b9, #c2bed0, #cac4e8, #d3c9ff, #b2a1ff, #8e7aff, #6351ff, #0022ff);
-}
 main section .deck:nth-child(3) {
   margin-right: 11.5vw;
 }
-main section .deck:nth-child(3) div {
+main section .deck:nth-child(3) a > div {
   -webkit-animation-name: brago;
           animation-name: brago;
   -webkit-animation-duration: 40s;
@@ -391,13 +423,10 @@ main section .deck:nth-child(3) div {
   -webkit-animation-timing-function: linear;
           animation-timing-function: linear;
 }
-main section .deck:nth-child(3) p {
-  background: linear-gradient(0deg, rgb(255, 255, 255) 46%, rgb(0, 42, 255) 52%);
-}
 main section .deck:nth-child(4) {
   margin-left: 11.5vw;
 }
-main section .deck:nth-child(4) div {
+main section .deck:nth-child(4) a > div {
   -webkit-animation-name: urdragon;
           animation-name: urdragon;
   -webkit-animation-duration: 40s;
@@ -406,9 +435,6 @@ main section .deck:nth-child(4) div {
           animation-iteration-count: infinite;
   -webkit-animation-timing-function: linear;
           animation-timing-function: linear;
-}
-main section .deck:nth-child(4) p {
-  background-image: radial-gradient(circle, #4719cb, #0067f4, #008de7, #00a9bf, #00c09d, #47b36d, #6ba33c, #898f00, #855e0f, #67371d, #391c1b, #000000);
 }
 
 #comandante {
@@ -434,18 +460,18 @@ main section .deck:nth-child(4) p {
 }
 #comandante .card {
   height: 33px;
-  border: 1px solid black;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border: 1px solid antiquewhite;
+  border-radius: 10px;
   overflow: hidden;
   transition: 0.7s ease;
+  margin-bottom: 3px;
 }
 #comandante .card .header {
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-end;
   max-height: 35px;
-  background-color: rgb(185, 185, 185);
+  background-color: antiquewhite;
   padding: 5px;
 }
 #comandante .card .header b {
@@ -462,6 +488,7 @@ main section .deck:nth-child(4) p {
 }
 #comandante .card:hover {
   height: 356px;
+  padding-bottom: 10px;
 }
 #comandante .card img {
   max-width: 223px;
@@ -477,6 +504,7 @@ main section .deck:nth-child(4) p {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+  padding-bottom: 10px;
 }
 #comandante .card .header {
   width: 100%;
@@ -506,18 +534,18 @@ main section .deck:nth-child(4) p {
 }
 #tierras .card, #resto .card {
   height: 33px;
-  border: 1px solid black;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border: 1px solid antiquewhite;
+  border-radius: 10px;
   overflow: hidden;
   transition: 0.7s ease;
+  margin-bottom: 3px;
 }
 #tierras .card .header, #resto .card .header {
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-end;
   max-height: 35px;
-  background-color: rgb(185, 185, 185);
+  background-color: antiquewhite;
   padding: 5px;
 }
 #tierras .card .header b, #resto .card .header b {
@@ -534,6 +562,7 @@ main section .deck:nth-child(4) p {
 }
 #tierras .card:hover, #resto .card:hover {
   height: 356px;
+  padding-bottom: 10px;
 }
 #tierras .card img, #resto .card img {
   max-width: 223px;
@@ -546,12 +575,15 @@ main section .deck:nth-child(4) p {
   width: 100%;
 }
 #tierras .card, #resto .card {
-  width: 49%;
-}
-#tierras .card:hover, #resto .card:hover {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+  width: 49%;
+}
+#tierras .card .header, #resto .card .header {
+  width: 100%;
+}
+#tierras .card:hover, #resto .card:hover {
   padding-bottom: 10px;
 }
 #tierras .card:hover .header, #resto .card:hover .header {
@@ -565,16 +597,19 @@ main section .deck:nth-child(4) p {
     width: 100%;
   }
 }
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1322px) {
   .deck {
     float: right;
+    margin: 5% 0 !important;
   }
 }
 @media screen and (max-width: 1200px) {
   .deck {
     float: none;
     width: calc(400px + 5vw);
-    margin: 5% 0 !important;
+  }
+  .circulo.azul {
+    margin-right: 50px;
   }
 }
 @media screen and (max-width: 1125px) {
