--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -2,6 +2,8 @@
 @import animaciones
 
 body
+    font-family: 'Caveat', cursive
+
     background-color: rgb(26, 26, 26)
 
     margin: 0
@@ -16,7 +18,7 @@ header
 
     z-index: 2
 
-    > img
+    > a img
         float: right
         width: 100px
 
@@ -77,7 +79,7 @@ main
 
         .deck
             border: 1px solid black
-            border-radius: 4px
+            border-radius: 8px
             box-shadow: 7px 7px 10px black
 
             overflow: hidden
@@ -87,35 +89,43 @@ main
             a
                 text-decoration: none
 
-            div
-                height: calc( 200px + 5vw )
-                width: calc( 400px + 5vw )
+                > div
+                    position: relative
 
-                background-color: white
-                background-size: 110% 110%
+                    height: calc( 240px + 5vw )
+                    width: calc( 440px + 5vw )
 
-                transition: 2s ease
+                    background-color: white
+                    background-size: 110% 110%
 
-            p
-                position: relative
+                    transition: 2s ease
+                    
+                    b
+                        position: absolute
+                        bottom: 10px
+                        left: 10px
 
-                text-align: center
-                text-transform: uppercase
+                        background-color: rgba(0, 0, 0, .8)
+                        color: white
+                        font-size: calc( 20px + 0.9vw )
 
-                border-bottom-left-radius: 4px
-                border-bottom-right-radius: 4px
+                        border-radius: 10px
 
-                padding: 20px
-                margin: 0
+                        padding: 10px
 
-                z-index: 1
-                
-                b
-                    background-color: rgba(0, 0, 0, .8)
-                    color: white
-                    border-radius: 10px
+                        z-index: 1
 
-                    padding: 10px
+                    > div
+                        width: 20px
+                        height: 20px
+
+                        float: right
+
+                        border-radius: 50%
+                        box-shadow: 2px 2px 5px black
+
+                        margin-top: 10px
+                        margin-right: 10px
 
             &:hover
                 transform: scale(98%)
@@ -125,18 +135,6 @@ main
                     background-position-y: 50%
                     background-size: 120% 120%
 
-        .deck:first-child
-            margin-right: 11.5vw
-
-            div
-                animation-name: atraxa
-                @include animacion
-
-            p 
-                background-image: url("data:image/svg+xml;utf8,%3Csvg preserveAspectRatio='none' viewBox='0 0 1 1' version='1.1' xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3ClinearGradient id='g'%3E%3Cstop offset='0' stop-color='%23fff' stop-opacity='0'%3E%3C/stop%3E%3Cstop offset='1' stop-color='%23fff' stop-opacity='1'%3E%3C/stop%3E%3C/linearGradient%3E%3Cmask id='m'%3E%3Crect x='0' y='0' width='1' height='1' fill='url(%23g)'%3E%3C/rect%3E%3C/mask%3E%3ClinearGradient id='a' gradientTransform='rotate(90)'%3E%3Cstop offset='0' stop-color='black'%3E%3C/stop%3E%3Cstop offset='1' stop-color='white'%3E%3C/stop%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientTransform='rotate(90)'%3E%3Cstop offset='0' stop-color='green'%3E%3C/stop%3E%3Cstop offset='1' stop-color='blue'%3E%3C/stop%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' width='1' height='1' fill='url(%23a)' mask='url(%23m)'%3E%3C/rect%3E%3Crect x='0' y='0' width='1' height='1' fill='url(%23b)' mask='url(%23m)' transform='translate(1,1) rotate(180)'%3E%3C/rect%3E%3C/svg%3E")
-                background-repeat: no-repeat
-                background-size: 100% 100%
-
         > h1
             width: 100%
 
@@ -144,36 +142,34 @@ main
             text-align: center
 
             margin: 0
+
+        .deck:first-child
+            margin-right: 11.5vw
+
+            a > div
+                animation-name: atraxa
+                @include animacion
         
         .deck:nth-child(2)
             margin-left: 11.5vw
 
-            div
+            a > div
                 animation-name: oloro
                 @include animacion
-
-            p
-                background-image: linear-gradient(to right, #000000, #2e2e2e, #585858, #878787, #b9b9b9, #c2bed0, #cac4e8, #d3c9ff, #b2a1ff, #8e7aff, #6351ff, #0022ff)
 
         .deck:nth-child(3)
             margin-right: 11.5vw
 
-            div
+            a > div
                 animation-name: brago
                 @include animacion
-
-            p
-                background: linear-gradient(0deg, rgba(255,255,255,1) 46%, rgba(0,42,255,1) 52%)
 
         .deck:nth-child(4)
             margin-left: 11.5vw
 
-            div
+            a > div
                 animation-name: urdragon
                 @include animacion
-
-            p
-                background-image: radial-gradient(circle, #4719cb, #0067f4, #008de7, #00a9bf, #00c09d, #47b36d, #6ba33c, #898f00, #855e0f, #67371d, #391c1b, #000000)
 
 #comandante
     @include list
@@ -189,6 +185,8 @@ main
         display: flex
         flex-flow: row wrap
         justify-content: center
+
+        padding-bottom: 10px
 
         .header
             width: 100%
@@ -206,13 +204,16 @@ main
         width: 100%
 
     .card
-        width: 49%
-
-    .card:hover
         display: flex
         flex-flow: row wrap
         justify-content: center
 
+        width: 49%
+
+        .header
+            width: 100%
+
+    .card:hover
         padding-bottom: 10px
 
         .header
