Arreglado bug imagen demasiado grande en index

--- a/css/sass/_media.sass
+++ b/css/sass/_media.sass
@@ -12,9 +12,9 @@
     .deck
         float: none
         width: calc( 400px + 5vw )
-    
-    .circulo.azul
-        margin-right: 50px
+
+        a > div
+            width: auto !important
 
 @media screen and (max-width: 1125px)
     section > h1
