--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -608,8 +608,8 @@ main section .deck:nth-child(4) a > div {
     float: none;
     width: calc(400px + 5vw);
   }
-  .circulo.azul {
-    margin-right: 50px;
+  .deck a > div {
+    width: auto !important;
   }
 }
 @media screen and (max-width: 1125px) {
