--- a/css/sass/_media.sass
+++ b/css/sass/_media.sass
@@ -17,33 +17,42 @@
             width: auto !important
 
 @media screen and (max-width: 1125px)
-    section > h1
-        margin-top: 20px !important
-        margin-bottom: 20px !important
-
     article
         width: 70%
         max-width: none !important
 
         margin-top: 20px 
+
+        .container
+            max-width: none !important
+
+    #resto
+        margin-bottom: 20px
     
 @media screen and (max-width: 800px)
     header div 
+        height: 20px
+
         background-color: transparent
+
+        transform: translateY(-10px)
+
         #hamburguer
             display: flex
 
             width: 130px
 
-            margin: 15px
-
         ul
             display: none
 
     main
-        height: calc( 100vh - 117.65px )
+        height: calc( 100vh - 63.65px )
 
-        margin-top: 117.65px
+        margin-top: 63.65px
+    
+@media screen and (max-width: 720px)
+    .card
+        width: 100% !important
 
 @media screen and (max-width: 480px)
     .deck
