--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -1,3 +1,4 @@
+@import framework/_yosiFramework
 @import variables
 @import animaciones
 
@@ -34,14 +35,12 @@ header
             align-items: center
             justify-content: space-around
 
-            width: 200px
-
             button
                 padding: 5px 5px 2px 5px
 
                 > img
-                    height: 30px
-                    width: 30px
+                    height: 20px
+                    width: 20px
 
         @include menu
 
@@ -135,14 +134,6 @@ main
                     background-position-y: 50%
                     background-size: 120% 120%
 
-        > h1
-            width: 100%
-
-            font-size: 4vw
-            text-align: center
-
-            margin: 0
-
         .deck:first-child
             margin-right: 11.5vw
 
@@ -172,6 +163,22 @@ main
                 @include animacion
 
 #comandante
+    background-color: black
+    border: 1px solid rgb(228, 208, 142)
+    border-radius: 10px
+    box-shadow: 7px 7px 10px black
+
+    h1
+        width: 100%
+        
+        font-size: calc( 10px + 1vw )
+        text-align: center
+        color: white
+        box-shadow: 0px 7px 0px black
+
+        padding: 5px
+        margin: 0
+
     @include list
 
     justify-content: center
@@ -194,32 +201,44 @@ main
             margin-bottom: 10px
 
 #tierras, #resto
-    @include list
-
-    justify-content: space-around
-
-    max-width: 30vw
+    background-color: black
+    border: 1px solid rgb(228, 208, 142)
+    border-radius: 10px
+    box-shadow: 7px 7px 10px black
 
     h1
-        width: 100%
+        font-size: calc( 10px + 1vw )
+        text-align: center
+        color: white
+        box-shadow: 0px 7px 0px black
 
-    .card
-        display: flex
-        flex-flow: row wrap
-        justify-content: center
+        padding: 5px
+        margin: 0
 
-        width: 49%
+    .container
+        @include list
 
-        .header
-            width: 100%
+        justify-content: space-around
 
-    .card:hover
-        padding-bottom: 10px
+        max-width: 30vw
 
-        .header
-            width: 100%
+        .card
+            display: flex
+            flex-flow: row wrap
+            justify-content: center
 
-            padding: 5px
-            margin-bottom: 5px
+            width: 49%
+
+            .header
+                width: 100%
+
+        .card:hover
+            padding-bottom: 10px
+
+            .header
+                width: 100%
+
+                padding: 5px
+                margin-bottom: 5px
 
 @import media
