Arregladas las subpáginas

--- a/css/sass/_variables.sass
+++ b/css/sass/_variables.sass
@@ -87,7 +87,7 @@ $secondaryStrong: #b1b1b1c4
             padding: 5px
 
             b
-                max-height: 23
+                max-height: 23px
                 flex-grow: 1
 
                 line-height: 25px
