Decks rc5 (cambios en listado cartas)

--- a/css/sass/_animaciones.sass
+++ b/css/sass/_animaciones.sass
@@ -58,3 +58,9 @@
 @keyframes zoomIn
     to
         transform: scale(110%)
+
+@keyframes open
+    from
+        height: 0%
+    to
+        height: 100%
