--- a/css/sass/_media.sass
+++ b/css/sass/_media.sass
@@ -1,12 +1,19 @@
 @media screen and (max-width: 1450px)
     #tierras .card, #resto .card
         width: 100%
+
+    .indexSection
+        justify-content: center
+    
+        .deck:nth-child(2)
+            margin-left: 2%
+
+        .deck:nth-child(4)
+            margin-left: 2%
     
 @media screen and (max-width: 1322px)
     .deck
         float: right
-
-        margin: 5% 0 !important
 
 @media screen and (max-width: 1200px)
     .deck
@@ -28,6 +35,10 @@
 
     #resto
         margin-bottom: 20px
+    
+@media screen and (max-width: 1004px)
+    .deck
+        margin: 2% 0 !important
     
 @media screen and (max-width: 800px)
     header div 
